# program

./: aams.rar
Guessing Numbers Game/: 源.cpp
Guessing Numbers Game/x64/Release/: Guessing Numbers Game.iobj
GuessnumGame/: Guessing Numbers Game.sln  Guessing Numbers Game.vcxproj
GuessnumGame/x64/Debug/: Guessing Numbers Game.exe.recipe  Guessing Numbers Game.ilk  vc143.idb
Pattern output/: Pattern output.vcxproj  源.cpp
Pattern output/x64/Debug/: Pattern output.exe.recipe  Pattern output.ilk  Pattern output.vcxproj.FileListAbsolute.txt  vc143.idb
Shutdown Mini Program/: Shutdown Mini Program.sln  Shutdown Mini Program.vcxproj  源.cpp
Shutdown Mini Program/x64/Debug/: Shutdown Mini Program.exe.recipe  vc143.idb  (+2 more)
aams/: CMakeLists.txt  another_func.cpp  basis.h  etrdef.h  func.h  gettext.cpp  gettxt.cpp  main.cpp  main_func.cpp  menu_func.cpp  mysql_func.cpp  user.txt
aams/数据库设计/: cmakedebug.txt  datatest(1).txt  insertData.txt  功能规划图.txt
aams/数据库设计/back/back1/: basis.h  main.cpp  menu_func.cpp
aams/数据库设计/back/back2/: etrdef.h  func.h  menu_func.cpp  mysql_func.cpp
aams/数据库设计/数据库方面/: aams_meta_str.sql  metaall.sql  testNoconcreate .sql
aams/数据库设计/数据库方面/er图/: ~$$绘图1.~vsdx  绘图1.vsdx
aams/数据库设计/数据库方面/testsql/: group.sql  metacreate.sql  table_structure.txt  user.txt  userpass.txt
aamstest/: CMakeLists.txt  main.cpp
aamsvs/Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  main.cpp
days_get/: days_get.sln  days_get.vcxproj  main.cpp
guessnumgame/: guessnumgame.cpp
patternoutput/: Pattern output.sln
untitled/: main.cpp
(+73 files in other folders)
